--- a/.github/workflows/cli-release.yml
+++ b/.github/workflows/cli-release.yml
@@ -37,6 +37,6 @@ jobs:
         with:
           distribution: goreleaser
           version: ${{ env.GITHUB_REF_NAME }}
-          args: release -f .goreleaser.yml --rm-dist
+          args: release -f .goreleaser.yml --clean
         env:
           GITHUB_TOKEN: ${{ secrets.PUBLISHER_TOKEN }}
