Add cmd to diretory path

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -12,7 +12,7 @@ builds:
       - arm64
     id: "cli"
     dir: .
-    main: ./cli
+    main: ./cli/cmd
     env:
       - CGO_ENABLED=0
     flags:
