fix: :bug: fix goreleaser yml identation

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,18 +1,22 @@
 # .goreleaser.yml
 
+project_name: mirrorful_cli
+
 builds:
-  - main: ./cli/main.go
-    binary: cli
-    goos:
-      - darwin
-      - linux
-    goarch:
-      - amd64
-      - arm64
-    env:
-      - CGO_ENABLED=0
-    flags:
-      - -mod=vendor
+  binary: cli
+  goos:
+    - darwin
+    - linux
+  goarch:
+    - amd64
+    - arm64
+  env:
+    - CGO_ENABLED=0
+  flags:
+    - -mod=vendor
+  id: "mirrorful_cli"
+  dir: .
+  main: ./cli
 
 release:
   prerelease: auto
