--- a/.github/workflows/cli-release.yml
+++ b/.github/workflows/cli-release.yml
@@ -34,8 +34,8 @@ jobs:
           go-version: 1.17
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v2
-        working-directory: ./cli
         with:
+          workdir: ./cli
           distribution: goreleaser
           version: ${{ env.GITHUB_REF_NAME }}
           args: release --clean
