feat: :tada: add brew step to goreleaesr

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -36,3 +36,13 @@ changelog:
 # Feel free to remove those if you don't want/use them.
 # yaml-language-server: $schema=https://goreleaser.com/static/schema.json
 # vim: set ts=2 sw=2 tw=0 fo=cnqoj
+
+brews:
+  - name: mirrorful
+    homepage: "https://github.com/Mirrorful/mirrorful"
+    tap:
+      owner: Mirrorful
+      name: homebrew-mirrorful
+    commit_author:
+      name: alexdanilowicz
+      email: alex.danilowicz@gmail.com
