--- a/editor/package.json
+++ b/editor/package.json
@@ -10,12 +10,17 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "@radix-ui/colors": "^0.1.8",
+    "@radix-ui/react-dialog": "^1.0.2",
+    "@radix-ui/react-dropdown-menu": "^2.0.2",
+    "@radix-ui/react-separator": "^1.0.1",
     "@types/node": "18.13.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "@types/tinycolor2": "^1.4.3",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
+    "feather-icons-react": "^0.6.2",
     "next": "13.1.6",
     "prettier": "^2.8.4",
     "react": "18.2.0",
