--- a/packages/mirrorful/package.json
+++ b/packages/mirrorful/package.json
@@ -1,13 +1,15 @@
 {
   "name": "mirrorful",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Manage your design system at scale",
   "keywords": [
-    "cli",
     "mirrorful",
     "design system",
     "npx",
-    "nodejs"
+    "nodejs",
+    "colors",
+    "theme",
+    "design"
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
