--- a/packages/mirrorful/tsconfig.json
+++ b/packages/mirrorful/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "exclude": ["node_modules", "editor"],
   "compilerOptions": {
     /* Visit https://aka.ms/tsconfig to read more about this file */
 
