Push .next dir so it's included in NPM package

--- a/packages/mirrorful/editor/.gitignore
+++ b/packages/mirrorful/editor/.gitignore
@@ -9,8 +9,9 @@
 /coverage
 
 # next.js
-/.next/
-/out/
+# We purposely push .next folder to the repository so it goes along with npm.
+#/.next/
+#/out/
 
 # production
 /build
