--- a/packages/mirrorful/package.json
+++ b/packages/mirrorful/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mirrorful",
-  "version": "1.0.13",
+  "version": "1.0.15",
   "description": "Manage your design system at scale",
   "keywords": [
     "mirrorful",
@@ -35,12 +35,32 @@
     "fs": "^0.0.1-security",
     "path": "^0.12.7",
     "rimraf": "^4.1.2",
-    "update-check": "^1.5.4"
+    "update-check": "^1.5.4",
+    "@chakra-ui/react": "^2.5.1",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@next/font": "13.1.6",
+    "@radix-ui/colors": "^0.1.8",
+    "@radix-ui/react-dialog": "^1.0.2",
+    "@radix-ui/react-dropdown-menu": "^2.0.2",
+    "@radix-ui/react-separator": "^1.0.1",
+    "feather-icons-react": "^0.6.2",
+    "framer-motion": "^9.0.4",
+    "next": "13.1.6",
+    "prettier": "^2.8.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "tinycolor2": "^1.6.0"
   },
   "devDependencies": {
     "@types/cross-spawn": "^6.0.2",
     "@types/node": "^18.14.0",
     "@types/validate-npm-package-name": "^4.0.0",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11",
+    "@types/tinycolor2": "^1.4.3",
+    "eslint": "8.34.0",
+    "eslint-config-next": "13.1.6",
     "typescript": "^4.9.5"
   },
   "engines": {
