add .next back to gitignore

--- a/packages/mirrorful/editor/.gitignore
+++ b/packages/mirrorful/editor/.gitignore
@@ -9,9 +9,8 @@
 /coverage
 
 # next.js
-# We purposely push .next folder to the repository so it goes along with npm.
-#/.next/
-#/out/
+/.next/
+/out/
 
 # production
 /build
