--- a/packages/mirrorful/editor/.npmignore
+++ b/packages/mirrorful/editor/.npmignore
@@ -1,2 +1,35 @@
-# Purposely empty .npmignore to prevent .gitignore from being used
-# This ensures the .next folder is pushed
+# Purposely excluding .next file 
+# next.js
+#/.next/
+# /out/
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+*.pem
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# local env files
+.env*.local
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
