--- a/packages/mirrorful/package.json
+++ b/packages/mirrorful/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mirrorful",
-  "version": "1.0.26",
+  "version": "1.0.25",
   "description": "Manage your design system at scale",
   "keywords": [
     "mirrorful",
@@ -15,7 +15,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc --build",
     "clean": "tsc --build --clean",
-    "local": "cross-env NODE_ENV=development tsc --build; node ./dist/index.js",
+    "local": "tsc --build; cross-env NODE_ENV=development node ./dist/index.js --verbose",
     "prepub": "tsc --build; cd editor; yarn build; cd .next; rm -rf cache; cd ../..; npm version patch"
   },
   "repository": {
@@ -28,7 +28,7 @@
     "url": "https://github.com/Mirrorful/mirrorful/issues"
   },
   "homepage": "https://github.com/Mirrorful/mirrorful#readme",
-  "bin": "dist/index.js",
+  "bin": "cross-env NODE_ENV=production dist/index.js",
   "dependencies": {
     "@chakra-ui/react": "^2.5.1",
     "@emotion/react": "^11.10.6",
@@ -40,6 +40,7 @@
     "@radix-ui/react-separator": "^1.0.1",
     "chalk": "^2.4.2",
     "commander": "^2.20.0",
+    "cross-env": "^7.0.3",
     "cross-spawn": "^7.0.3",
     "feather-icons-react": "^0.6.2",
     "framer-motion": "^9.0.4",
@@ -61,7 +62,6 @@
     "@types/react-dom": "18.0.11",
     "@types/tinycolor2": "^1.4.3",
     "@types/validate-npm-package-name": "^4.0.0",
-    "cross-env": "^7.0.3",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "typescript": "^4.9.5"
