--- a/packages/mirrorful/package.json
+++ b/packages/mirrorful/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mirrorful",
-  "version": "1.0.28",
+  "version": "1.0.29",
   "description": "Simple, open-source design system infrastructure.",
   "keywords": [
     "mirrorful",
@@ -28,7 +28,7 @@
     "url": "https://github.com/Mirrorful/mirrorful/issues"
   },
   "homepage": "https://github.com/Mirrorful/mirrorful#readme",
-  "bin": "cross-env NODE_ENV=production dist/index.js",
+  "bin": "dist/index.js",
   "dependencies": {
     "@chakra-ui/react": "^2.5.1",
     "@emotion/react": "^11.10.6",
@@ -40,7 +40,6 @@
     "@radix-ui/react-separator": "^1.0.1",
     "chalk": "^2.4.2",
     "commander": "^2.20.0",
-    "cross-env": "^7.0.3",
     "cross-spawn": "^7.0.3",
     "feather-icons-react": "^0.6.2",
     "framer-motion": "^9.0.4",
@@ -62,6 +61,7 @@
     "@types/react-dom": "18.0.11",
     "@types/tinycolor2": "^1.4.3",
     "@types/validate-npm-package-name": "^4.0.0",
+    "cross-env": "^7.0.3",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "typescript": "^4.9.5"
