--- a/examples/create-react-app/package.json
+++ b/examples/create-react-app/package.json
@@ -34,5 +34,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "mirrorful": "^1.0.34"
   }
 }
