--- a/packages/mirrorful/editor/package.json
+++ b/packages/mirrorful/editor/package.json
@@ -31,7 +31,7 @@
     "eslint-config-next": "13.1.6",
     "feather-icons-react": "^0.6.2",
     "framer-motion": "^9.0.4",
-    "next": "13.1.6",
+    "next": "^12.0.0",
     "prettier": "^2.8.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
