--- a/packages/mirrorful/package.json
+++ b/packages/mirrorful/package.json
@@ -50,6 +50,7 @@
     "prettier": "^2.8.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-highlight": "^0.15.0",
     "react-icons": "^4.7.1",
     "rimraf": "^4.1.2",
     "tinycolor2": "^1.6.0",
