--- a/packages/mirrorful/editor/package.json
+++ b/packages/mirrorful/editor/package.json
@@ -34,6 +34,7 @@
     "prettier": "^2.8.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-highlight": "^0.15.0",
     "react-icons": "^4.7.1",
     "tinycolor2": "^1.6.0",
     "typescript": "4.9.5"
