--- a/packages/mirrorful/tsconfig.json
+++ b/packages/mirrorful/tsconfig.json
@@ -10,5 +10,5 @@
     "strict": true /* Enable all strict type-checking options. */,
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
   },
-  "include": ["./package.json"]
+  "include": ["./package.json", "cli/"]
 }
