--- a/packages/mirrorful/package.json
+++ b/packages/mirrorful/package.json
@@ -45,6 +45,7 @@
     "feather-icons-react": "^0.6.2",
     "framer-motion": "^9.0.4",
     "fs": "^0.0.1-security",
+    "lottie-react": "^2.4.0",
     "next": "^12.0.0",
     "path": "^0.12.7",
     "prettier": "^2.8.4",
