--- a/packages/mirrorful/editor/package.json
+++ b/packages/mirrorful/editor/package.json
@@ -14,6 +14,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.17",
     "@chakra-ui/react": "^2.5.1",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
@@ -30,6 +31,7 @@
     "eslint-config-next": "13.1.6",
     "feather-icons-react": "^0.6.2",
     "framer-motion": "^9.0.4",
+    "lottie-react": "^2.4.0",
     "next": "^12.0.0",
     "prettier": "^2.8.4",
     "react": "18.2.0",
