--- a/packages/mirrorful/package.json
+++ b/packages/mirrorful/package.json
@@ -30,6 +30,7 @@
   "homepage": "https://github.com/Mirrorful/mirrorful#readme",
   "bin": "dist/cli/index.js",
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.17",
     "@chakra-ui/react": "^2.5.1",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
@@ -44,6 +45,7 @@
     "feather-icons-react": "^0.6.2",
     "framer-motion": "^9.0.4",
     "fs": "^0.0.1-security",
+    "lottie-react": "^2.4.0",
     "next": "^12.0.0",
     "path": "^0.12.7",
     "prettier": "^2.8.4",
