--- a/packages/mirrorful/editor/package.json
+++ b/packages/mirrorful/editor/package.json
@@ -33,6 +33,7 @@
     "framer-motion": "^9.0.4",
     "lottie-react": "^2.4.0",
     "next": "^12.0.0",
+    "posthog-js": "^1.50.0",
     "prettier": "^2.8.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
