--- a/examples/nuxt-3/.mirrorful/store/config.json
+++ b/examples/nuxt-3/.mirrorful/store/config.json
@@ -1,39 +1,32 @@
 {
-    "tokens": {
-        "colorData": [
-            {
-                "name": "Nuxt Green",
-                "baseColor": "#09ed70",
-                "variants": {
-                    "500": "#09ed70"
-                }
-            },
-            {
-                "name": "Blue",
-                "baseColor": "#0928ed",
-                "variants": {
-                    "500": "#0928ed"
-                }
-            },
-            {
-                "name": "Red",
-                "baseColor": "#ed0946",
-                "variants": {
-                    "500": "#ed0946"
-                }
-            },
-            {
-                "name": "Orange",
-                "baseColor": "#ed9709",
-                "variants": {
-                    "500": "#ed9709"
-                }
-            }
-        ]
-    },
-    "__internal__": {
-        "migrations": {
-            "version": "0.0.2"
-        }
-    }
+	"tokens": {
+		"colorData": [
+			{
+				"name": "Brand",
+				"baseColor": "#09ed70",
+				"variants": {
+					"500": "#09ed70"
+				}
+			},
+			{
+				"name": "Secondary",
+				"baseColor": "#7d7c7c",
+				"variants": {
+					"500": "#7d7c7c"
+				}
+			},
+			{
+				"name": "Primary",
+				"baseColor": "#171717",
+				"variants": {
+					"500": "#171717"
+				}
+			}
+		]
+	},
+	"__internal__": {
+		"migrations": {
+			"version": "0.0.2"
+		}
+	}
 }
