--- a/examples/nuxt-3/package.json
+++ b/examples/nuxt-3/package.json
@@ -15,9 +15,12 @@
     "@babel/eslint-parser": "^7.19.1",
     "@nuxt/eslint-config": "^0.1.1",
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
+    "autoprefixer": "^10.4.13",
     "mirrorful": "^3.0.15",
     "nuxt": "^3.2.3",
-    "sass": "^1.58.3"
+    "postcss": "^8.4.21",
+    "sass": "^1.58.3",
+    "tailwindcss": "^3.2.7"
   },
   "dependencies": {
     "eslint": "^8.35.0",
