--- a/examples/tailwind-next/package.json
+++ b/examples/tailwind-next/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
+    "mirrorful": "^3.1.3",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
   }
