--- a/packages/mirrorful/editor/package.json
+++ b/packages/mirrorful/editor/package.json
@@ -41,6 +41,7 @@
     "react-dom": "18.2.0",
     "react-highlight": "^0.15.0",
     "react-icons": "^4.7.1",
+    "react-intl": "^6.2.10",
     "tinycolor2": "^1.6.0",
     "typescript": "4.9.5"
   },
