--- a/packages/mirrorful/package.json
+++ b/packages/mirrorful/package.json
@@ -51,6 +51,7 @@
     "fs": "^0.0.1-security",
     "lottie-react": "^2.4.0",
     "next": "^12.0.0",
+    "open": "^8.4.2",
     "path": "^0.12.7",
     "posthog-js": "^1.50.0",
     "prettier": "^2.8.4",
