--- a/packages/mirrorful/package.json
+++ b/packages/mirrorful/package.json
@@ -65,6 +65,7 @@
   "devDependencies": {
     "@types/conf": "^3.0.0",
     "@types/cross-spawn": "^6.0.2",
+    "@types/jest": "^29.4.0",
     "@types/node": "^18.14.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
@@ -73,6 +74,8 @@
     "cross-env": "^7.0.3",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.0.5",
     "typescript": "^4.9.5"
   },
   "engines": {
