--- a/packages/mirrorful/package.json
+++ b/packages/mirrorful/package.json
@@ -50,6 +50,7 @@
     "framer-motion": "^9.0.4",
     "fs": "^0.0.1-security",
     "lottie-react": "^2.4.0",
+    "mirrorful": "^4.0.1",
     "next": "^12.0.0",
     "path": "^0.12.7",
     "posthog-js": "^1.50.0",
