--- a/packages/mirrorful/editor/package.json
+++ b/packages/mirrorful/editor/package.json
@@ -20,6 +20,7 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@hello-pangea/color-picker": "^3.2.2",
+    "@mirrorful/editor": "file:../../editor",
     "@radix-ui/colors": "^0.1.8",
     "@radix-ui/react-dialog": "^1.0.2",
     "@radix-ui/react-dropdown-menu": "^2.0.2",
@@ -32,9 +33,9 @@
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "feather-icons-react": "^0.6.2",
-    "framer-motion": "^9.0.4",
+    "framer-motion": "^10.6.0",
     "lottie-react": "^2.4.0",
-    "next": "^12.0.0",
+    "next": "^13.0.0",
     "posthog-js": "^1.50.0",
     "prettier": "^2.8.4",
     "react": "18.2.0",
