--- a/packages/mirrorful/editor/tsconfig.json
+++ b/packages/mirrorful/editor/tsconfig.json
@@ -19,9 +19,10 @@
         "name": "next"
       }
     ],
-    "baseUrl": ".",
+    "baseUrl": "./../..",
     "paths": {
-      "*": ["./src/*"]
+      "@editor/*": ["editor/*"],
+      "@package/*": ["package/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
