--- a/packages/mirrorful/package.json
+++ b/packages/mirrorful/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc --build",
-    "local": "rm -rf ./dist; tsc --build; cross-env NODE_ENV=development node ./dist/cli/index.js",
+    "local": "ts-node-esm removeFileOrDirectory.ts -D ./dist && tsc --build && cross-env NODE_ENV=development node ./dist/cli/index.js",
     "prepub": "rm -rf ./dist; npm version patch; tsc --build; cd editor; yarn build; cd .next; rm -rf cache; cd ../..;",
     "release:patch": "rm -rf ./dist; npm version patch; tsc --build; cd editor; yarn build; cd .next; rm -rf cache; cd ../..; npm publish;",
     "release:minor": "rm -rf ./dist; npm version minor; tsc --build; cd editor; yarn build; cd .next; rm -rf cache; cd ../..; npm publish;",
@@ -66,7 +66,7 @@
   "devDependencies": {
     "@types/conf": "^3.0.0",
     "@types/cross-spawn": "^6.0.2",
-    "@types/node": "^18.14.0",
+    "@types/node": "^18.15.3",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "@types/tinycolor2": "^1.4.3",
@@ -74,6 +74,7 @@
     "cross-env": "^7.0.3",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
+    "ts-node": "^10.9.1",
     "husky": "^8.0.3",
     "prettier": "^2.8.4",
     "pretty-quick": "^3.1.3",
