--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -17,7 +17,7 @@
     "resolveJsonModule": true
   },
   "include": ["**/*.ts", "**/*.tsx", "src/**/*.json"],
-  "exclude": ["node_modules", "lib"],
+  "exclude": ["node_modules", "lib", "tsconfig.json"],
   "tsc-alias": {
     "verbose": true
   }
