--- a/packages/mirrorful/editor/package.json
+++ b/packages/mirrorful/editor/package.json
@@ -19,11 +19,10 @@
     "@chakra-ui/react": "^2.5.1",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "@mirrorful/core": "^1.0.2",
+    "@mirrorful/core": "1.0.2",
     "@types/node": "18.13.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
-    "@types/tinycolor2": "^1.4.3",
     "conf": "^10.0.2",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
@@ -33,8 +32,6 @@
     "prettier": "^2.8.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.7.1",
-    "tinycolor2": "^1.6.0",
     "typescript": "4.9.5"
   },
   "devDependencies": {
