--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@mirrorful/core",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "scripts": {
     "build": "tsc -p tsconfig.json && tsc-alias -p tsconfig.json",
     "build:watch": "tsc && (concurrently \"tsc -w\" \"tsc-alias -w\")",
-    "release:patch": "yarn build; npm patch; npm publish;",
-    "release:minor": "yarn build; npm minor; npm publish;",
-    "release:major": "yarn build; npm major; npm publish;"
+    "release:patch": "yarn build; npm version patch; npm publish;",
+    "release:minor": "yarn build; npm version minor; npm publish;",
+    "release:major": "yarn build; npm version major; npm publish;"
   },
   "publishConfig": {
     "access": "public"
