--- a/packages/mirrorful/package.json
+++ b/packages/mirrorful/package.json
@@ -48,6 +48,7 @@
     "cross-spawn": "^7.0.3",
     "framer-motion": "^9.0.4",
     "fs": "^0.0.1-security",
+    "mirrorful": "^5.0.0",
     "next": "^12.0.0",
     "open": "^8.4.2",
     "path": "^0.12.7",
@@ -67,10 +68,10 @@
     "cross-env": "^7.0.3",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
-    "ts-node": "^10.9.1",
     "husky": "^8.0.3",
     "prettier": "^2.8.4",
     "pretty-quick": "^3.1.3",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   },
   "engines": {
