--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,8 @@
     "**/.next": true,
     "**/vendor": true
   },
-  "cSpell.words": ["Mirrorful"]
+  "cSpell.words": ["Mirrorful"],
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
+  }
 }
