--- a/packages/mirrorful/editor/package.json
+++ b/packages/mirrorful/editor/package.json
@@ -24,7 +24,7 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "conf": "^10.0.2",
-    "eslint": "8.34.0",
+    "eslint": "^8.36.0",
     "eslint-config-next": "13.1.6",
     "framer-motion": "^10.6.0",
     "next": "^13.0.0",
@@ -35,6 +35,12 @@
     "typescript": "4.9.5"
   },
   "devDependencies": {
-    "@types/conf": "^3.0.0"
+    "@mirrorful/eslint-config": "file:../../eslint-config",
+    "@types/conf": "^3.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.56.0",
+    "@typescript-eslint/parser": "^5.56.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-simple-import-sort": "^10.0.0"
   }
 }
