--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -26,7 +26,7 @@
     "typescript": "^4.9.5"
   },
   "devDependencies": {
-    "@mirrorful/eslint-config": "file:../packages/eslint-config",
+    "@mirrorful/eslint-config": "file:../../packages/eslint-config",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
     "eslint": "^8.36.0",
