adjusted apples colors

--- a/packages/mirrorful/editor/src/presets/model/apple.json
+++ b/packages/mirrorful/editor/src/presets/model/apple.json
@@ -2,83 +2,131 @@
   "tokens": {
     "colorData": [
       {
-        "name": "Apple Silver",
-        "baseColor": "#e6e6e6",
+        "name": "Apple Black",
+        "baseColor": "#000",
         "variants": {
-          "50": "#ffffff",
-          "100": "#ffffff",
-          "200": "#ffffff",
-          "300": "#ffffff",
-          "400": "#f5f5f5",
-          "500": "#e6e6e6",
-          "600": "#d7d7d7",
-          "700": "#c7c7c7",
-          "800": "#b8b8b8",
-          "900": "#a9a9a9"
+          "50": "#4d4d4d",
+          "100": "#3d3d3d",
+          "200": "#2e2e2e",
+          "300": "#1f1f1f",
+          "400": "#0f0f0f",
+          "500": "#000000",
+          "600": "#000000",
+          "700": "#000000",
+          "800": "#000000",
+          "900": "#000000"
         }
       },
       {
         "name": "Apple Gray",
-        "baseColor": "#424245",
+        "baseColor": "#666666",
         "variants": {
-          "50": "#8e8e92",
-          "100": "#7e7e84",
-          "200": "#6f6f74",
-          "300": "#606064",
-          "400": "#515155",
-          "500": "#424245",
-          "600": "#333335",
-          "700": "#242426",
-          "800": "#151516",
-          "900": "#060606"
+          "50": "#b3b3b3",
+          "100": "#a3a3a3",
+          "200": "#949494",
+          "300": "#858585",
+          "400": "#757575",
+          "500": "#666666",
+          "600": "#575757",
+          "700": "#474747",
+          "800": "#383838",
+          "900": "#292929"
         }
       },
       {
-        "name": "Apple Cultured White",
-        "baseColor": "#f5f5f7",
+        "name": "Apple Silver",
+        "baseColor": "#979797",
+        "variants": {
+          "50": "#e3e3e3",
+          "100": "#d4d4d4",
+          "200": "#c5c5c5",
+          "300": "#b6b6b6",
+          "400": "#a6a6a6",
+          "500": "#979797",
+          "600": "#888888",
+          "700": "#787878",
+          "800": "#696969",
+          "900": "#5a5a5a"
+        }
+      },
+      {
+        "name": "Apple White",
+        "baseColor": "#eeeeee",
         "variants": {
           "50": "#ffffff",
           "100": "#ffffff",
           "200": "#ffffff",
           "300": "#ffffff",
-          "400": "#ffffff",
-          "500": "#f5f5f7",
-          "600": "#e4e4e9",
-          "700": "#d3d3dc",
-          "800": "#c2c2ce",
-          "900": "#b1b1c1"
+          "400": "#fdfdfd",
+          "500": "#eeeeee",
+          "600": "#dfdfdf",
+          "700": "#cfcfcf",
+          "800": "#c0c0c0",
+          "900": "#b1b1b1"
         }
       },
       {
-        "name": "Apple True Blue Accent",
-        "baseColor": "#0066cc",
+        "name": "Apple Blue",
+        "baseColor": "#0088cc",
         "variants": {
-          "50": "#66b2ff",
-          "100": "#47a3ff",
-          "200": "#2994ff",
-          "300": "#0a85ff",
-          "400": "#0075eb",
-          "500": "#0066cc",
-          "600": "#0057ad",
-          "700": "#00478f",
-          "800": "#003870",
-          "900": "#002952"
+          "50": "#66ccff",
+          "100": "#47c2ff",
+          "200": "#29b8ff",
+          "300": "#0aadff",
+          "400": "#009ceb",
+          "500": "#0088cc",
+          "600": "#0074ad",
+          "700": "#005f8f",
+          "800": "#004b70",
+          "900": "#003652"
         }
       },
       {
-        "name": "Apple Orange Accent",
-        "baseColor": "#f56300",
+        "name": "Apple Dark Blue",
+        "baseColor": "#12192f",
         "variants": {
-          "50": "#ffbc8f",
-          "100": "#ffaa70",
-          "200": "#ff9852",
-          "300": "#ff8633",
-          "400": "#ff7315",
-          "500": "#f56300",
-          "600": "#d65700",
-          "700": "#b84a00",
-          "800": "#993e00",
-          "900": "#7b3200"
+          "50": "#3c549e",
+          "100": "#344887",
+          "200": "#2b3c71",
+          "300": "#23315b",
+          "400": "#1a2545",
+          "500": "#12192f",
+          "600": "#0a0d19",
+          "700": "#010103",
+          "800": "#000000",
+          "900": "#000000"
+        }
+      },
+      {
+        "name": "Apple Red",
+        "baseColor": "#D0102B",
+        "variants": {
+          "50": "#f58394",
+          "100": "#f3677b",
+          "200": "#f14b62",
+          "300": "#ef2e49",
+          "400": "#ec1231",
+          "500": "#d0102b",
+          "600": "#b40e25",
+          "700": "#970c1f",
+          "800": "#7b0919",
+          "900": "#5e0714"
+        }
+      },
+      {
+        "name": "Apple Orange",
+        "baseColor": "#FF8F5F",
+        "variants": {
+          "50": "#fffaf8",
+          "100": "#ffe5d9",
+          "200": "#ffcfbb",
+          "300": "#ffba9c",
+          "400": "#ffa47e",
+          "500": "#ff8f5f",
+          "600": "#ff7a40",
+          "700": "#ff6422",
+          "800": "#ff4f03",
+          "900": "#e44400"
         }
       }
     ],
