added run script os to allow windows to run core

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -2,7 +2,9 @@
   "name": "@mirrorful/core",
   "version": "1.0.6",
   "scripts": {
-    "build": "tsc -p tsconfig.json && tsc-alias -p tsconfig.json && cp package.json lib",
+    "build": "run-script-os",
+    "build:darwin:linux": "tsc -p tsconfig.json && tsc-alias -p tsconfig.json && cp package.json lib",
+    "build:win32": "tsc -p tsconfig.json && tsc-alias -p tsconfig.json && xcopy package.json lib",
     "build:watch": "tsc && (concurrently \"tsc -w\" \"tsc-alias -w\" \"cp package.json lib\")",
     "release:patch": "yarn build && cp package.json lib && npm version patch && npm publish ./lib;",
     "release:minor": "yarn build && cp package.json lib && npm version minor && npm publish ./lib;",
@@ -31,6 +33,7 @@
     "react-dom": "^18.2.0",
     "react-highlight": "^0.15.0",
     "react-icons": "^4.8.0",
+    "run-script-os": "^1.1.6",
     "tinycolor2": "^1.6.0",
     "typescript": "^4.9.5"
   },
