--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -25,6 +25,7 @@
     "@emotion/styled": "^11.10.6",
     "@hello-pangea/color-picker": "^3.2.2",
     "framer-motion": "^10.6.0",
+    "json5": "^2.2.3",
     "lottie-react": "^2.4.0",
     "posthog-js": "^1.51.3",
     "react": "^18.2.0",
@@ -36,6 +37,7 @@
   },
   "devDependencies": {
     "@mirrorful/eslint-config": "file:../eslint-config",
+    "@types/json5": "^2.2.0",
     "@types/node": "^18.15.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
