--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.6",
   "scripts": {
     "build": "run-script-os",
-    "build:win32": "tsc -p tsconfig.json && tsc-alias -p tsconfig.json && xcopy package.json lib",
+    "build:win32": "tsc -p tsconfig.json && tsc-alias -p tsconfig.json && xcopy /Y package.json lib",
     "build:default": "tsc -p tsconfig.json && tsc-alias -p tsconfig.json && cp package.json lib",
     "build:watch": "run-script-os",
-    "build:watch:win32": "tsc && tsc -w && tsc-alias -w && xcopy package.json lib",
+    "build:watch:win32": "tsc && (concurrently \"tsc -w\" \"tsc-alias -w\" \"xcopy /Y package.json lib\")",
     "build:watch:default": "tsc && (concurrently \"tsc -w\" \"tsc-alias -w\" \"cp package.json lib\")",
     "release:patch": "yarn build && cp package.json lib && npm version patch && npm publish ./lib;",
     "release:minor": "yarn build && cp package.json lib && npm version minor && npm publish ./lib;",
